# rapid-prompter

./: LICENSE  README.md  configure.py  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
pages/: 1_parse_and_upload.py  2_generate_prompts.py
src/rapid_promptgen/: generate.py  parse_and_upload.py
src/rapid_promptgen/common/: datasets.py  utils.py
